<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.main.AddressActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/mail_address" />

                    <EditText
                        android:id="@+id/email_log_in_edit_text"
                        android:layout_width="fill_parent"
                        android:layout_height="60dp"
                        android:hint="@string/hint_address"
                        android:gravity="center"
                        android:singleLine="true"
                        android:textSize="20sp"
                       />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">


                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/password" />

                    <EditText
                        android:id="@+id/password_log_in_edit_text"
                        android:layout_width="fill_parent"
                        android:layout_height="60dp"
                        android:hint="@string/hint_password"
                        android:inputType="textPassword"
                        android:textSize="20sp"
                        android:gravity="center"
                        />

                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/mailLoginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="loginMailButton"
                android:text="@string/button_login" />

            <Button
                android:id="@+id/newAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="addMailButton"
                android:text="@string/button_register" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>