<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:background="#ffffff"
    android:minHeight="100dp">

    <TextView
        android:id="@+id/user_name_morning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_washroom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:paddingEnd="10dp"
        android:text="@string/washroom"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/button_morning_timer_start"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/border"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/text_washroom"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/line"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_morning_timer_start"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_morning_timer_end"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:background="@drawable/border"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/text_line"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_breakfast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="30dp"
        android:text="@string/breakfast"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_morning_timer_end"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry" />

    <CheckBox
        android:id="@+id/checkbox_breakfast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/text_breakfast"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>